# ParrotRev2

./: .gitignore  CMakeLists.txt  Changes for Pico2.odt  README.md  parrot.h  parrot_core1.c  parrot_func.c  parrot_main.c
Documentation/: Camberwell Parrot 1280x1024 greyscale+text.xcf  Camberwell Parrot 1820x1024 Squirting.xcf  Camberwell Parrot 1820x1024 Youtube Thumbnail with Chapter overlay.xcf  Camberwell Parrot 1820x1024 colour.xcf  Camberwell Parrot 1820x1024 greyscale + rainbow text.xcf  Camberwell Parrot 1820x1024 greyscale.xcf  Camberwell Parrot v1.xcf  Camberwell Parrot v2.xcf  Camberwell text.xcf  I2S Clock Calculations.ods  Parrot text.xcf  The text.xcf  The.xcf  camberwell.xcf  parrot.xcf  rainbow text.xcf
Documentation/html/: annotated.html  annotated_dup.js  classes.html  dir_c129155e216b31587ee8737f52b704ce.html  dir_c129155e216b31587ee8737f52b704ce.js  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  md__f_1_2_dev_2_parrot_2_r_e_a_d_m_e.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  parrot_8h.html  parrot_8h.js  parrot_8h_source.html  parrot__core1_8c.html  parrot__core1_8c.js  parrot__func_8c.html  parrot__func_8c.js  parrot__main_8c.html  parrot__main_8c.js  unionu_sample.html
Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js
Documentation/latex/: annotated.tex  files.tex  md__f_1_2_dev_2_parrot_2_r_e_a_d_m_e.tex  parrot_8h.tex  parrot_8h_source.tex  parrot__core1_8c.tex  parrot__func_8c.tex  parrot__main_8c.tex  refman.tex  unionu_sample.tex
Hardware Test Programs/: psram-test.uf2
Hardware Test Programs/Algorithm/: CMakeLists.txt  TestAlgorithm.c  parrot.h
Hardware Test Programs/Audio/: CMakeLists.txt  TestAudio.c  parrot.h
Hardware Test Programs/Audio/i2s/: i2s.c
Hardware Test Programs/Clocks/: CMakeLists.txt  TestClocks.c  parrot.h
Hardware Test Programs/Divisor/: CMakeLists.txt  TestDivisor.c  parrot.h
Hardware Test Programs/PSRAM/: CMakeLists.txt  psram-test.c
Hardware Test Programs/Potentiometers/: CMakeLists.txt  TestPots.c  parrot.h
Hardware Test Programs/RotaryEncoder/: CMakeLists.txt  TestEncoder.c  parrot.h
freeverb/: freeverb.c  freeverb.h
gverb/: gverb.c  gverbdsp.c
gverb/include/: gverb.h  ladspa-util.h
hardware_design/Build Notes/: Issues during Rev 2 build.odt  KiCad Notes.odt  PCM1808 Anti-alias.odt  Rev 2 pin assignments.odt
hardware_design/Datasheets/: Pico Pinouts.odt
hardware_design/Datasheets/Adafruit-MPM3610-PCB-master/: README.md
hardware_design/Symbols/: SR1712F-0202-20F0A-N9-N-027.dcm  SR1712F-0202-20F0A-N9-N-027.kicad_sym  SR1712F-0202-20F0A-N9-N-027.lib  SR1712F-0202-20F0A-N9-N-027.mod  SR1712F020220F0AN9N027.kicad_mod
hardware_design/panel/: Front Panel Holes.ods  Front Panel UI Elements.ods  Notes on creating front panel.odt  panel-Edge_Cuts.gbr  panel-F_Cu.gbr  panel-F_Mask.gbr  panel-NPTH.drl  panel-PTH.drl  panel-job.gbrjob  panel.kicad_pcb  panel.kicad_prl  panel.kicad_pro
hardware_design/pcb/: Analog_IO.kicad_sch  Hardware re-design list.odt  Rev2_Bom.csv  UI_Board.kicad_sch  _autosave-Audio_CV.kicad_sch  _autosave-main_processor.kicad_sch  codec.kicad_sch  interconnect.kicad_sch  pcb-B_Cu.gbr  pcb-B_Mask.gbr  pcb-B_Paste.gbr  pcb-B_Silkscreen.gbr  pcb-Edge_Cuts.gbr  pcb-F_Cu.gbr  pcb-F_Mask.gbr  pcb-F_Paste.gbr  pcb-F_Silkscreen.gbr  pcb-NPTH.drl  pcb-PTH.drl  pcb-User_Eco1.gbr  pcb-job.gbrjob  pcb.dsn  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  pcb.kicad_sch-bak  pcb.rules  pcb.ses  pcb_bom.csv  pcb_bom.ods
hardware_design/pcb/amp simulation/: amp simulation.kicad_prl  amp simulation.kicad_pro
i2s/: i2s.c
pverb/: pverb.c  pverb.h
